fixing css alignment issues

--- a/src/app/camera/camera.component.css
+++ b/src/app/camera/camera.component.css
@@ -1,31 +1,45 @@
 /* main color:#dd2c00 */
 
+
 /* hover: #ff6e40 */
 
 .navbar-info {
     background-color: #dd2c00;
 }
 
+.navbar,
+#stillImage {
+    text-align: center;
+}
+
+.navbar{
+    margin-bottom: 3px;
+}
+
+#back { 
+    float: left; 
+}
 a {
     color: #fff;
     font-weight: bold;
 }
 
 .ssb-icon {
-    margin-top: 14px;
+    margin-top:2px;
     margin-bottom: 7px;
     color: #fff;
 }
 
+
 /* back arrow */
 
 .arrow {
-    margin-top: 8px;
     padding-left: 22px;
     margin-bottom: 5px;
 }
-.text-center h1{
-    font-size: 2em ;
+
+.text-center h1 {
+    font-size: 2em;
 }
 
 body {
