--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,6 @@ body {
     font-family: KBREINDEERGAMES;
     font-size: 60px;
 }
+.center{
+    text-align: center;
+}
